[package]
name = "dj-runner"
version = "0.2.1"
edition = "2021"
description = """
[dj-runner] is the console that can run [dj] directly by sentence or file.
Running [dj-runner] directly will enter real-time mode. You can use `control + c` to exit program."""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27.0"
# dj = { git = "https://gitee.com/study_less_shape/dj-rs", features = ["builtin"] }
# dj = { path = "../dj-rs", features = ["builtin"]}
dj = { git = "https://gitee.com/ZerAx/dj-rs", branch = "0.2", features = [
    "builtin",
] }
tui-input = "0.8.0"
anyhow = "*"
